# foton

./: .gitignore  README.md  example.py  out.png.recipe.json  out2.png.recipe.json  output.png.recipe.json  pyproject.toml
foton/: __init__.py  base.py  graph.py  image.py
foton.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
foton/nodes/: __init__.py  ai.py  color.py  io.py
